syntax = "proto3";
package com.grpc;

message Auth {
    string username = 1;
    string password = 2;
}

message ImageMetaData {
    int32 foodServiceId = 1;
    int32 menuItemId = 2;
    int32 chunksAmount = 3;
}

message ImageChunk {
    bytes data = 1;
    int32 imageIndex = 2;
    int32 position = 3;
}

message Profile {
    string status = 1;
    repeated string constraints = 2;
}

message MenuItem {
    int32 id = 1;
    string name = 2;
    double price = 3;
    string description = 4;
    string foodType = 5;
}

message RegisterRequest {
    Auth auth = 1;
}

message RegisterResponse {
    string code = 1;
}

message SaveProfileRequest {
    Auth auth = 1;
    Profile profile = 2;
}

message SaveProfileResponse {
    string code = 1;
}

message FetchProfileRequest {
    Auth auth = 1;
}

message FetchProfileResponse {
    string code = 1;
    Profile profile = 2;
}

message SaveMenuItemRequest {
    int32 foodServiceId = 1;
    MenuItem menuItem = 2;
}

message SaveMenuItemResponse {
    string code = 1;
    int32 menuId = 2;
}

message SaveImageToMenuItemRequest {
    oneof requestType {
        ImageMetaData metaData = 1;
        ImageChunk chunk = 2;
    }
}

message SaveImageToMenuItemResponse {
    string code = 1;
}

message FetchImagesFromMenuRequest {
    ImageMetaData metadata = 1;
}

message FetchImagesFromMenuResponse {
    ImageChunk chunk = 1;
}

message FetchMenusRequest {
    int32 foodServiceId = 1;
}

message FetchMenusResponse {
    repeated MenuItem menuItems = 1;
}

message JoinQueueRequest {
    int32 foodServiceId = 1;
}

message JoinQueueResponse {
    int32 userQueueId = 1;
}

message LeaveQueueRequest {
    int32 userQueueId = 1;
    int32 foodServiceId = 2;
    int32 duration = 3;
}

message LeaveQueueResponse {
    string result = 1;
}

message EstimateQueueTimeRequest {
    int32 foodServiceId = 1;
}

message EstimateQueueTimeResponse {
    int32 time = 1;
}

service GrpcService {
    rpc register (RegisterRequest) returns (RegisterResponse);
    rpc saveProfile (SaveProfileRequest) returns (SaveProfileResponse);
    rpc fetchProfile (FetchProfileRequest) returns (FetchProfileResponse);
    rpc saveMenuItem (SaveMenuItemRequest) returns (SaveMenuItemResponse);
    rpc saveImage (stream SaveImageToMenuItemRequest) returns (SaveImageToMenuItemResponse);
    rpc fetchImages (FetchImagesFromMenuRequest) returns (stream FetchImagesFromMenuResponse);
    rpc fetchMenus (FetchMenusRequest) returns (FetchMenusResponse);
    rpc joinQueue (JoinQueueRequest) returns (JoinQueueResponse);
    rpc leaveQueue (LeaveQueueRequest) returns (LeaveQueueResponse);
    rpc estimateQueueTime (EstimateQueueTimeRequest) returns (EstimateQueueTimeResponse);
}
